# MLOps-Project

./: .gitignore  .nojekyll  .pre-commit-config.yaml  Dockerfile  README.md  contributing.md  environment-dev.yml  environment.yml  index.html  pyproject.toml  robots.txt  ruff.toml  search.json  sitemap.xml
.github/workflows/: docker_image_build.yml  lint-type-check.yml  publish.yml
docs/: _quarto.yml  index.qmd
docs/_site/: index.html
notebooks/: EDA.ipynb  test.ipynb
